--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>BRAND LOKAL</title>
+    <title>BRAND LOKAL UVFD</title>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                 <img src="./img/sweatpants.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">SWEATPANTS</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">119k</h2>
+                <h2 class="sliderPrice">220k</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -48,7 +48,7 @@
                 <img src="./img/hoodieboxy.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">HOODIE BOXY</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">149k</h2>
+                <h2 class="sliderPrice">250k</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -57,7 +57,7 @@
                 <img src="./img/nfl.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">JERSEY NFL</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$109</h2>
+                <h2 class="sliderPrice">140k</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -66,7 +66,7 @@
                 <img src="./img/t-shirt.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">T-SHIRT</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$99</h2>
+                <h2 class="sliderPrice">100k</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
